GNU Thales 0.9.6 (XX/XX/XXXX)
   - added unreal's +T cmode.
   - added unreal's +D umode (needed for PrivDeaf module)
   - added unreal's +z umode. patch from nick martini <nick@misanthropia.nu>
   - nickinfo, an example from Andreas Lindemann <admiral@1sq.org> !
   - Recycled-counter, an example from ProPheT <prophet@recycled-irc.org> !
   - server.linkedto is now an int (was a tinyint).
GNU Thales 0.9.5 (08/02/2004)
   - Fixed user/chan modes for Unreal beta19 support (chanmodes +I and +H not
     used anymore)
   - NeedMaintainers file added.
   - removed Sequana support
   - safely ignore Unreal's EOS messages, but send one after login.
   - now keeps track of max number of servers too.
   - hardcoded url (motd, admin) changes to savannah.
   - Unreal's SWHOIS support.
   - server.lastsplit is not overwritten when a server rejoins.
   - changed "Thales" to "GNU Thales" where it was relevant.
   - renamed log() to mylog(), and log_perror() to mylog_perror() to prevent
     conflicts.
   - added TBUST to hybrid CAPAB line. Credits go to Wes Baehr
     <iwes@totalmac.net>
   - added a php script for clones detection. contributed by
     Jens 'DukePyrolator' Voss <DukePyrolator@wiredirc.net>
   - added Unreal mode +M
Thales 0.9.4 (19/03/2003)
   - away status was not properly restored in Caching mode. (reported
     by admiral@ns.elbenstern.de)
   - renamed strlwr to strtolwr (misc.c) to be able to compile on cygwin.
   - improved ReportUsage.sh POSIX compatibility
   - added Unreal usermodes +R & +V
   - increased nickname length in SQL table user for hybrid ircd.
   - re-indented the whole code using indent
   - fixed bug in caching mode
   - added log messages to the hash functions in verbose mode
   - fixed bug in caching mode
Thales 0.9.3 (04/02/2003)
   - removed debug message
Thales 0.9.2 (03/02/2003)
   - added support for ultimate 2.8 +L chanmode
   - thales could receive SJOIN for nonexisting users under some race
     conditions. Now ignore them.