@@ -1,0 +1,6 @@
+;<?php die(); ?>
+
+server = localhost
+user = username
+pass = password
+db = thales
